--- a/src/pages/my-teams/my-teams.html
+++ b/src/pages/my-teams/my-teams.html
@@ -1,9 +1,4 @@
-<!--
-  Generated template for the MyTeams page.
 
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
@@ -14,5 +9,7 @@
 
 
 <ion-content padding>
-
+<p>You are not currently following any teams</p>
+<p>First select a tournament, then you can follow teams from their team page.</p>
+<button ion-button (click)="goToTournaments()">Find a Tournament></button>
 </ion-content>
