--- a/src/pages/my-teams/my-teams.html
+++ b/src/pages/my-teams/my-teams.html
@@ -1,10 +1,15 @@
 
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>MyTeams</ion-title>
-  </ion-navbar>
-
+  <ion-header>
+    <ion-navbar color="primary">
+      <button ion-button menuToggle>
+        <ion-icon name="menu"></ion-icon>
+      </button>
+      <ion-title>Elite Schedule</ion-title>
+    </ion-navbar>
+    
+      <ion-toolbar color="secondary">
+      <ion-title>MyTeams</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 
