--- a/src/pages/my-teams/my-teams.html
+++ b/src/pages/my-teams/my-teams.html
@@ -6,7 +6,7 @@
       </button>
       <ion-title>Elite Schedule</ion-title>
     </ion-navbar>
-    
+
       <ion-toolbar color="secondary">
       <ion-title>MyTeams</ion-title>
     </ion-toolbar>
@@ -16,5 +16,5 @@
 <ion-content padding>
 <p>You are not currently following any teams</p>
 <p>First select a tournament, then you can follow teams from their team page.</p>
-<button ion-button (click)="goToTournaments()">Find a Tournament></button>
+<button ion-button (click)="goToTournaments()">Find a Tournament</button>
 </ion-content>
