--- a/src/pages/tournaments/tournaments.html
+++ b/src/pages/tournaments/tournaments.html
@@ -6,9 +6,9 @@
 -->
 <ion-header>
 
-  <ion-navbar>
+  <ion-toolbar color="secondary">
     <ion-title>Tournaments</ion-title>
-  </ion-navbar>
+  </ion-toolbar>
 
 </ion-header>
 
