--- a/src/pages/tournaments/tournaments.html
+++ b/src/pages/tournaments/tournaments.html
@@ -5,14 +5,15 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
-  <ion-toolbar color="secondary">
-    <ion-title>Tournaments</ion-title>
-  </ion-toolbar>
-
+    <ion-navbar color= "primary">
+      <ion-title>Select a Tournament</ion-title>
+    </ion-navbar>
 </ion-header>
 
 
 <ion-content padding>
-  <button navigate ion-item (click)="navigate()">Back</button>
+    <ion-list>
+      <button MMTourny ion-item (click)="itemTapped()">March Madness Tournament</button>
+      <button SummerShowdown ion-item (click)="itemTapped()">Summer Showdown</button>
+    </ion-list>
 </ion-content>
